customized dot-files to my needs

--- a/.gitconfig
+++ b/.gitconfig
@@ -58,16 +58,16 @@
 	contributors = shortlog --summary --numbered
 
 	# Merge GitHub pull request on top of the `master` branch
-	mpr = "!f() { \
-		if [ $(printf \"%s\" \"$1\" | grep '^[0-9]\\+$' > /dev/null; printf $?) -eq 0 ]; then \
-			git fetch origin refs/pull/$1/head:pr/$1 && \
-			git rebase master pr/$1 && \
-			git checkout master && \
-			git merge pr/$1 && \
-			git branch -D pr/$1 && \
-			git commit --amend -m \"$(git log -1 --pretty=%B)\n\nCloses #$1.\"; \
-		fi \
-	}; f"
+	#mpr = "!f() { \
+	#	if [ $(printf \"%s\" \"$1\" | grep '^[0-9]\\+$' > /dev/null; printf $?) -eq 0 ]; then \
+	#		git fetch origin refs/pull/$1/head:pr/$1 && \
+	#		git rebase master pr/$1 && \
+	#		git checkout master && \
+	#		git merge pr/$1 && \
+	#		git branch -D pr/$1 && \
+	#		git commit --amend -m \"$(git log -1 --pretty=%B)\n\nCloses #$1.\"; \
+	#	fi \
+	#}; f"
 
 [apply]
 
@@ -139,25 +139,3 @@
 	# installations. To use `simple` instead, add this to your `~/.extra` file:
 	# `git config --global push.default simple`. See http://git.io/mMah-w.
 	default = matching
-
-# URL shorthands
-
-[url "git@github.com:"]
-
-	insteadOf = "gh:"
-	pushInsteadOf = "github:"
-	pushInsteadOf = "git://github.com/"
-
-[url "git://github.com/"]
-
-	insteadOf = "github:"
-
-[url "git@gist.github.com:"]
-
-	insteadOf = "gst:"
-	pushInsteadOf = "gist:"
-	pushInsteadOf = "git://gist.github.com/"
-
-[url "git://gist.github.com/"]
-
-	insteadOf = "gist:"
